--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "logbookViz",
   "private": true,
-  "engines.yarn": "1.0.2",
   "version": "1.0.2",
+  "engines": {
+    "yarn": "1.0.2"
+  },
   "dependencies": {
     "jquery": "^3.2.1",
     "leaflet": "^1.2.0",
