--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "yarn": "1.0.2"
   },
   "dependencies": {
+    "@rails/webpacker": "^3.0.1",
     "jquery": "^3.2.1",
     "leaflet": "^1.2.0",
     "leaflet-fullscreen": "^1.0.2"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.8.2"
   }
 }
