--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "logbookViz",
   "private": true,
-  "version": "1.0.2",
+  "version": "1.1.0",
   "engines": {
-    "yarn": "1.0.2"
+    "yarn": "1.1.0"
   },
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
+    "caniuse-lite": "^1.0.30000739",
     "jquery": "^3.2.1",
     "leaflet": "^1.2.0",
-    "leaflet-fullscreen": "^1.0.2"
+    "leaflet-fullscreen": "^1.0.2",
+    "webpack": "^3.6.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.8.2"
+    "webpack-dev-server": "^2.9.1"
   }
 }
