--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -4,7 +4,6 @@
   "_/_/node_modules/leaflet/dist/images/layers-2x.png": "/packs/_/_/node_modules/leaflet/dist/images/layers-2x-4f0283c6ce28e888000e978e537a6a56.png",
   "_/_/node_modules/leaflet/dist/images/layers.png": "/packs/_/_/node_modules/leaflet/dist/images/layers-a6137456ed160d7606981aa57c559898.png",
   "_/_/node_modules/leaflet/dist/images/marker-icon.png": "/packs/_/_/node_modules/leaflet/dist/images/marker-icon-2273e3d8ad9264b7daa5bdbf8e6b47f8.png",
-  "application.js": "/packs/application-460a3c0bd48891e91c43.js",
-  "stylesheets.css": "/packs/stylesheets-da11e1d1211f1804e939ce0f0e02d5f9.css",
-  "stylesheets.js": "/packs/stylesheets-8cd14e6256305eb86607.js"
+  "application.css": "/packs/application-da11e1d1211f1804e939ce0f0e02d5f9.css",
+  "application.js": "/packs/application-df4153ef074b7f46f40d.js"
 }
