--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -5,11 +5,10 @@ default: &default
   source_entry_path: packs
   public_output_path: packs
   cache_path: tmp/cache/webpacker
-  public_path: /
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
-  resolved_paths: []
+  resolved_paths: ['/']
 
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
