update rack-cors settings

--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -1,4 +1,4 @@
 {
-  "application.js": "/packs/application-144383db407aaad3cf22.js",
-  "application.css": "/packs/application-d41d8cd98f00b204e9800998ecf8427e.css"
+  "application.css": "/packs/application-d41d8cd98f00b204e9800998ecf8427e.css",
+  "application.js": "/packs/application-480228d3a27a74355fc2.js"
 }
