--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "1.3.2",
   "engines": {
-    "yarn": "1.3.2",
-    "node" : "^9.11.1"
+    "yarn": "^1.7.0",
+    "node" : "^10.2.1"
   },
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
