--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "logbookViz",
   "private": true,
-  "version": "1.3.2",
+  "version": "1.7.0",
   "engines": {
-    "yarn": "^1.7.0",
-    "node" : "^10.2.1"
+    "yarn": "1.7.0"
   },
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
