--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,8 @@
 
 # Heroku config variables file
 .env
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
