--- a/config/local_env.yml
+++ b/config/local_env.yml
@@ -1,2 +1,3 @@
 MAPSNAP_ROOT_URL: 'http://localhost:8080'
 MAP_SNAP_API_KEY: 'ba324d902dcff2bd5688d040163a82bb'
+TEMP_STORIES_API_KEY: '75a80e90e2d2b7d8c9857f54a7aa2024'
